# jeeves-capability-mini-swe-agent

./: .gitmodules  ARCHITECTURE_TRACKER.md  CONSTITUTION.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
jeeves-infra/: .gitignore  ARCHITECTURE_TRACKER.md  CONSTITUTION.md  LICENSE  README.md  pyproject.toml
jeeves-infra/jeeves_infra/: __init__.py  capability_registry.py  context.py  context_bounds.py  feature_flags.py  kernel_client.py  resource_tracker.py  settings.py  wiring.py
jeeves-infra/jeeves_infra/config/: __init__.py  kernel.py  resources.py
jeeves-infra/jeeves_infra/database/: INDEX.md  __init__.py  client.py  factory.py  init_schema.py  registry.py
jeeves-infra/jeeves_infra/distributed/: redis_bus.py
jeeves-infra/jeeves_infra/gateway/: __init__.py  app.py  chat.py  event_bus.py  governance.py  grpc_client.py  server.py  websocket.py  websocket_manager.py
jeeves-infra/jeeves_infra/gateway/proto/: __init__.py  jeeves_pb2_grpc.py
jeeves-infra/jeeves_infra/llm/: factory.py  gateway.py
jeeves-infra/jeeves_infra/logging/: __init__.py  adapter.py  context.py
jeeves-infra/jeeves_infra/memory/: __init__.py  handlers.py  intent_classifier.py  manager.py  sql_adapter.py
jeeves-infra/jeeves_infra/middleware/: __init__.py  rate_limit.py
jeeves-infra/jeeves_infra/observability/: __init__.py  metrics.py  otel_adapter.py  tracing.py  tracing_middleware.py
jeeves-infra/jeeves_infra/postgres/: __init__.py  checkpoint.py  client.py  constants.py  graph.py
jeeves-infra/jeeves_infra/protocols/: __init__.py  capability.py  engine_pb2.py  engine_pb2_grpc.py  events.py  interfaces.py  types.py  validation.py  working_memory.py
jeeves-infra/jeeves_infra/redis/: client.py  connection_manager.py
jeeves-infra/jeeves_infra/runtime/: agents.py
jeeves-infra/jeeves_infra/services/: debug_api.py  worker_coordinator.py
jeeves-infra/jeeves_infra/tools/: __init__.py  catalog.py  executor.py
jeeves-infra/jeeves_infra/utils/: cot_proxy.py  id_generator.py  plan_triage.py  strings.py  testing.py
jeeves-infra/jeeves_infra/webhooks/: __init__.py  service.py
jeeves-infra/jeeves_tests/: conftest.py  mission_conftest.py
jeeves-infra/jeeves_tests/fixtures/: agents.py  database.py  llm.py
jeeves-infra/jeeves_tests/unit/: test_config.py  test_imports.py  test_kernel_client.py  test_resource_tracker.py  test_tool_executor.py
jeeves-infra/mission_system/: CONSTITUTION.md  INDEX.md  adapters.py  bootstrap.py  capability_wiring.py  contracts_core.py  pyproject.toml
jeeves-infra/mission_system/common/: models.py  prompt_compression.py
jeeves-infra/mission_system/config/: constants.py
jeeves-infra/mission_system/events/: bridge.py
jeeves-infra/mission_system/gateway/: app.py  event_bus.py  governance.py  health.py  server.py  websocket.py
jeeves-infra/mission_system/orchestrator/: __init__.py  agent_events.py  event_context.py  events.py  governance_service.py
jeeves-infra/mission_system/services/: __init__.py  chat_service.py  worker_coordinator.py
jeeves-infra/mission_system/tests/: README.md  __init__.py
jeeves-infra/tests/: conftest.py
jeeves-infra/tests/fixtures/: agents.py  database.py  services.py
jeeves-infra/tests/unit/: test_llm_gateway.py  test_protocols.py  test_thresholds.py
(+144 files in other folders)
