[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jeeves-infra"
version = "1.0.0"
description = "Jeeves Infrastructure Layer - adapters above the kernel"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    # gRPC for kernel communication (Go kernel via gRPC)
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
gateway = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "sse-starlette>=1.6.0",
]
postgres = [
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pgvector>=0.2.0",
]
redis = [
    "redis>=5.0.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]
llm = [
    "litellm>=1.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.5.0",
]
all = [
    "jeeves-infra[gateway,postgres,redis,embeddings,llm]",
]

[tool.hatch.build.targets.wheel]
packages = ["jeeves_infra"]
